fix: install CRDs

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -52,7 +52,7 @@ jobs:
         uses: Azure/k8s-deploy@v5
         with:
           action: deploy
-          manifests: https://github.com/kubernetes-sigs/gateway-api/releases/download/v1.1.0/standard-install.yaml
+          manifests: "https://github.com/kubernetes-sigs/gateway-api/releases/download/v1.1.0/standard-install.yaml"
           
       # Deploys application based on given manifest file
       - name: Deploys application
