--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -52,11 +52,13 @@ jobs:
         uses: Azure/k8s-deploy@v5
         with:
           action: deploy
-          manifests: "https://github.com/kubernetes-sigs/gateway-api/releases/download/v1.1.0/standard-install.yaml"
+          manifests: |
+            https://github.com/kubernetes-sigs/gateway-api/releases/download/v1.1.0/standard-install.yaml
           
       # Deploys application based on given manifest file
       - name: Deploys application
         uses: Azure/k8s-deploy@v5
         with:
           action: deploy
-          manifests: ${{ env.DEPLOYMENT_MANIFEST_PATH }}
+          manifests: |
+            ${{ env.DEPLOYMENT_MANIFEST_PATH }}
