--- a/kubernetes/02-traefik-services.yml
+++ b/kubernetes/02-traefik-services.yml
@@ -2,7 +2,11 @@ apiVersion: v1
 kind: Service
 metadata:
   name: traefik-dashboard-service
+
 spec:
+  ports:
+    - port: 8080
+      targetPort: dashboard
   selector:
     app: traefik
 ---
