--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -49,10 +49,7 @@ jobs:
           use-kubelogin: 'true'
       
       - name: Install cert-manager
-        uses: Azure/k8s-deploy@v5
-        with:
-          action: deploy
-          manifests: https://github.com/cert-manager/cert-manager/releases/download/v1.15.0/cert-manager.yaml
+        run: kubectl apply -f https://github.com/cert-manager/cert-manager/releases/download/v1.15.0/cert-manager.yaml
           
       # Deploys application based on given manifest file
       - name: Deploys application
